# metats

./: LICENSE  README.md  pyproject.toml  requirements.txt  requirments.txt
.github/workflows/: main.yml
docs/: index.html  search.js
docs/api/: index.html  metats.html  search.js
docs/api/metats/: datasets.html  features.html  forecasters.html  generators.html  pipeline.html  utils.html
docs/api/metats/features/: deep.html  statistical.html  unsupervised.html
docs/api/metats/forecasters/: statistical.html  utils.html  wrappers.html
docs/assets/scripts/: app.js  highlight.min.js
docs/assets/style/: app.css
docs/metats/: features.html  pipeline.html
docs/metats/features/: statistical.html  unsupervised.html
docs/metats/forecasters/: statistical.html  utils.html  wrappers.html
examples/: Example (1) - Statistical vs Deep meta-features.ipynb  Example (2) - TsFresh vs  Deep LSTM vs Deep TCN.ipynb  metaLearing_exp.py  readme.md
metats/: datasets.py  features.py  pipeline.py
metats/features/: __init__.py  deep.py  statistical.py  unsupervised.py
metats/forecasters/: __init__.py  statistical.py  utils.py  wrappers.py
tests/: test-darts.py  test-forecaster-sktime.py  test-forecaster-snaive.py  test-pipeline.py  test-tsfresh.py
